--- a/style.css
+++ b/style.css
@@ -65,28 +65,78 @@ h2 {
 .section-c {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-gap: 20px;
 }
+
 .cities {
     display: grid;
     grid-template-rows: repeat(5,450px);
     justify-content: center;
+    grid-gap: 0px;
+    margin: 120px;
+}
+
+.cities div {
+    position: relative;
+    border: 1px solid black;
 }
 
 .cities h3 {
-    margin:auto;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    margin: auto;
+}
+
+.cities div:nth-child(1) {
+    background-image: url(images/becentral.jpg);
+    background-position: center;
+    width: 450px;
+    height: 300px;
+    background-size: cover;
+}
+
+.cities div:nth-child(2) {
+    background-image: url(images/genk.jpg);
+    background-position: center;
+    width: 450px;
+    height: 300px;
+    background-size: cover;
+}
+
+.cities div:nth-child(3) {
+    background-image: url(images/liege.jpg);
+    background-position: center;
+    width: 450px;
+    height: 300px;
+    background-size: cover;
+}
+
+.cities div:nth-child(4) {
+    background-image: url(images/anvers.jpg);
+    background-position: center;
+    width: 450px;
+    height: 300px;
+    background-size: cover;
+}
+
+.cities div:nth-child(5) {
+    background-image: url(images/charleroi.jpg);
+    background-position: center;
+    width: 450px;
+    height: 300px;
+    background-size: cover;
 }
 
 .cities-info {
     display: grid;
     grid-template-rows: repeat(5, 450px);
-
+    grid-gap: 0px;
 }
 
-.cities-info p {
-    margin: auto;
-}
-
-.sub1 {
-background-image: url(images/becentral.jpg);
+.cities-info div {
+    border: 1px solid black;
+    width: 450px;
+    height: 300px;
 }
