--- a/style.css
+++ b/style.css
@@ -65,14 +65,16 @@ h2 {
 .section-c {
     display: grid;
     grid-template-columns: 50% 50%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 900px;
+    grid-gap: 70px;
 }
 
 .cities {
-    display: grid;
-    grid-template-rows: repeat(5,450px);
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    grid-gap: 0px;
-    margin: 120px;
 }
 
 .cities div {
@@ -95,6 +97,7 @@ h2 {
     width: 450px;
     height: 300px;
     background-size: cover;
+    margin: 40px;
 }
 
 .cities div:nth-child(2) {
@@ -103,6 +106,7 @@ h2 {
     width: 450px;
     height: 300px;
     background-size: cover;
+    margin: 40px;
 }
 
 .cities div:nth-child(3) {
@@ -111,6 +115,7 @@ h2 {
     width: 450px;
     height: 300px;
     background-size: cover;
+    margin: 40px;
 }
 
 .cities div:nth-child(4) {
@@ -119,6 +124,7 @@ h2 {
     width: 450px;
     height: 300px;
     background-size: cover;
+    margin: 40px;
 }
 
 .cities div:nth-child(5) {
@@ -127,16 +133,18 @@ h2 {
     width: 450px;
     height: 300px;
     background-size: cover;
+    margin: 40px;
 }
 
 .cities-info {
-    display: grid;
-    grid-template-rows: repeat(5, 450px);
-    grid-gap: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .cities-info div {
     border: 1px solid black;
     width: 450px;
     height: 300px;
+    margin: 40px;
 }
